5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1585_2049.log
== TEST (2019-03-21 19:06:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

dividendo =
divisor =	
quociente = 
resto =
-- ERROR:
File "XXXX", line 8
    dividendo =
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:06:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

dividendo = x
divisor =	y
quociente = 
resto =
-- ERROR:
File "XXXX", line 10
    quociente = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:07:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

dividendo = x
divisor =	y


-- ERROR:
File "XXXX", line 10
    quociente = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:08:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

dividendo = x
divisor = y
quociente = 173
resto = 0



-- ERROR:
File "XXXX", line 10
    quociente = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:08:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
quociente = 173
resto = 0



-- EXECUTION TIME:
0.156897
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:09:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y



-- ERROR:
File "XXXX", line 10
    quociente = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:10:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
print(quociente) = x // y
print(resto) = x % y



-- ERROR:
File "XXXX", line 9
    print(quociente) = x // y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:11:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
print(quociente) = x // y
print(resto) = x % y



-- ERROR:
File "XXXX", line 9
    print(quociente) = x // y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:11:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
print(quociente) = x / y
print(resto) = x % y



-- ERROR:
File "XXXX", line 9
    print(quociente) = x / y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:11:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
print(quociente) = x / y
print(resto) = x % y



-- ERROR:
File "XXXX", line 9
    print(quociente) = x / y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:11:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
dividendo = x
divisor = y
print(quociente) = x / y
print(resto) = x % y



-- ERROR:
File "XXXX", line 9
    print(quociente) = x / y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:12:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))
print(quociente) = x // y
print(resto) = x % y



-- ERROR:
File "XXXX", line 7
    print(quociente) = x // y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

dividendo = x
divisor = y
quociente = x // y
resto = x % y



-- ERROR:
File "XXXX", line 7
    print(quociente) = x // y
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:15:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y) 
q = x // y
r = x % y



-- OUTPUT:
8
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y) 
print(x // y)
print(x % y)



-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:16:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y) 
print(x // y)
print(x % y)



-- EXECUTION TIME:
0.15879
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:28:41) 
-- CODE:
x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))



-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:30:02) 
-- CODE:
x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y)
print(x / y)
print(x % y)
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:30:21) 
-- CODE:
x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y)
print(x // y)
print(x % y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:30:29) 
-- CODE:
x = int(input(" Digite o dividendo: "))
y = int(input(" Digite o divisor: "))

print(x)
print(y)
print(x // y)
print(x % y)
-- EXECUTION TIME:
0.134133
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
